# testtask-qa-automator-reg-ru-

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pycheck.yaml
domain_counter/: cli.py  engine.py
domain_counter/scripts/: domain_counter.py
tests/: test_function.py
